--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "motion": "^12.9.2",
     "next": "15.3.1",
     "react": "^19.1.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
