--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@codaworks/react-glow": "^1.0.6",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.12.1",
     "icons": "^1.0.0",
     "keen-slider": "^6.8.6",
